# x-suite

./: .gitignore  README.md  pyproject.toml
xsuite/: __init__.py  __main__.py  auth.py  bulk_post_deleter.py  bulk_repost_deleter.py  bulk_unfollower.py  cli.py  unfollower.py
