[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xsuite"
version = "1.0.0"
description = "A modular CLI toolkit for X.com (Twitter) account management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anas Jadoon"}
]
keywords = ["x", "twitter", "cli", "automation", "selenium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.15",
    "webdriver-manager>=4.0",
]

[project.scripts]
xsuite = "xsuite.cli:main"

[tool.setuptools.packages.find]
include = ["xsuite*"]
